[Bug #21794] Fix for platforms where O_CLOEXEC is not available